--- a/APM/src/app/products/product-list.component.html
+++ b/APM/src/app/products/product-list.component.html
@@ -46,7 +46,12 @@
                         <td>{{product.productCode | lowercase | convertToSpaces:'-'}}</td>
                         <td>{{product.releaseDate}}</td>
                         <td>{{product.price | currency:'$':symbol:'1.2-2'}}</td>
-                        <td>{{product.starRating}}</td>
+                        <!-- <td>{{product.starRating}}</td> -->
+                        <td>
+                            <pm-star    [rating]='product.starRating'
+                                        (ratingClicked)='onRatingClicked($event)'>
+                            </pm-star>
+                        </td>
                     </tr>
                 </tbody>
             </table>
